<resources>
    <string name="app_name">Кардиограф</string>
    <string name="bluetooth_required">Для работы приложения необходимо запустить Bluetooth</string>
    <string name="bt_enable">Включить bluetooth</string>
    <string name="bt_not_supported">Приложение принудительно закрыто\nBluetooth не поддерживается на устройстве</string>
    <string name="connect">Подключиться</string>
    <string name="mac">MAC - адрес</string>
    <string name="bluetooth_disabled">Bluetooth disabled</string>
    <string name="search_devices">Поиск устройств</string>
    <string name="disclaimer">Данное приложение является учебным проектом и ни в коем случае не может быть использовано в серьезных медицинских целях\n\nИспользуйте программу на свой страх и риск</string>
    <string name="attention">Внимание</string>
    <string name="understood">Я все понял</string>
    <string name="about">О проекте</string>
    <string name="about_desc_1">Данное приложение представляет собой учебный проект \"Кардиограф\".</string>
    <string name="about_desc_2">Цель проекта: разработка мобильного кардиографа на базе платформы Arduino с использованием устройства под управлением ОС Android.</string>
    <string name="about_desc_3">Проект выполнили студенты Бухмастов А.Д., Кулижников Н.А., Пика Г.С. университета ИТМО под руководством Горшкова К.С.</string>
    <string name="preparing">Подготовка</string>
    <string name="data_loosing">Потеря данных</string>
    <string name="sync_failed">Синхронизация провалена</string>
    <string name="repeat">Повторить</string>
    <string name="settings">Настройки</string>
    <string name="settings_graph">Графики</string>
    <string name="frame_rate">Частота (обновления/секунда)</string>
    <string name="pixel_per_frame">Пиксели на значение (пиксели)</string>
    <string name="max_point_abs">Максимальный диапазон (пиксели)</string>
    <string name="graph_height">Высота графика (пиксели)</string>
    <string name="settings_archiving">Архивирование</string>
    <string name="pref_use_archiving_title">Архивировать измерения</string>
    <string name="pulse">Пульс</string>
    <string name="unknown">Неизвестен</string>
    <string name="calibration">Калибровка</string>
    <string name="measuring">Измерение</string>
    <string name="hits_per_min">" уд/мин"</string>
    <string name="frequent">Частый</string>
    <string name="rare">Редкий</string>
    <string name="moderate">Умеренный</string>
    <string name="pulse_so_low">Ваша остановочка</string>
    <string name="archive">Архив</string>
    <string name="download">Скачать</string>
    <string name="delete">Удалить</string>
    <string name="share">Поделиться</string>
    <string name="file_deleted">Файл удален</string>
    <string name="settings_arduino">Ардуино</string>
    <string name="pref_arduino_average_tolerance_title">Допуск среднего значения</string>
    <string name="pref_arduino_max_tolerance_title">Допуск максимального значения</string>
    <string name="pref_clear_archive_title">Очистить архив</string>
    <string name="proceed">Продолжить</string>
    <string name="something_went_wrong">Что-то пошло не так</string>
    <string name="archive_cleared">Архив очищен</string>
    <string name="pref_clear_archive_warning">Вы собираетесь удалить все архивные записи.\nДанное действие необратимо.</string>
    <string name="replay">Воспроизведение сессии</string>

</resources>
