<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <EditTextPreference
        android:key="frame_rate"
        android:title="@string/frame_rate"
        android:numeric="integer"
        android:selectAllOnFocus="true"
        android:defaultValue="80" />

    <EditTextPreference
        android:key="pixel_per_frame"
        android:title="@string/pixel_per_frame"
        android:numeric="integer"
        android:selectAllOnFocus="true"
        android:defaultValue="2" />

    <EditTextPreference
        android:key="max_point_abs"
        android:title="@string/max_point_abs"
        android:numeric="integer"
        android:selectAllOnFocus="true"
        android:defaultValue="250" />

    <EditTextPreference
        android:key="graph_height"
        android:title="@string/graph_height"
        android:numeric="integer"
        android:selectAllOnFocus="true"
        android:defaultValue="100" />

</PreferenceScreen>
