<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_disclaimer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.bukhmastov.cardiograph.DisclaimerActivity"
    android:orientation="vertical"
    android:weightSum="1"
    android:background="@color/colorPrimary">

    <Space
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_weight="0.09" />

    <TextView
        android:text="@string/attention"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:id="@+id/disclaimer_header"
        android:layout_weight="0.18"
        android:textAppearance="@style/TextAppearance.AppCompat.Button"
        android:textAlignment="center"
        android:gravity="center"
        android:fontFamily="sans-serif-medium"
        android:textSize="36sp"
        android:textColor="@color/colorBackground" />

    <TextView
        android:text="@string/disclaimer"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:id="@+id/disclaimer_content"
        android:layout_weight="0.56"
        android:textAppearance="@style/TextAppearance.AppCompat.Button"
        android:textAlignment="center"
        android:gravity="center"
        android:textSize="18sp"
        android:textColor="@color/colorBackground" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_weight="0.13" />

    <Button
        android:text="@string/understood"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/disclaimer_button"
        android:layout_weight="0.03"
        android:background="@color/colorPrimaryDark"
        android:elevation="0dp"
        android:textColor="@color/colorBackground"
        android:textSize="14sp" />
</LinearLayout>
